@@ -15,18 +15,32 @@
 // along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 
 /**
- * Version details
+ * Privacy Subsystem implementation for block_lw_courses.
  *
  * @package    block_lw_courses
- * @copyright  1999 onwards Martin Dougiamas (http://dougiamas.com)
- * @copyright  2017 Mathew May <mathewm@hotmail.co.nz>
+ * @copyright  2018 Mathew May mathew.may@learningworks.co.nz
  * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
  */
 
+namespace block_lw_courses\privacy;
+
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2018071600;        // The current plugin version (Date: YYYYMMDDXX).
-$plugin->requires  = 2016051900;        // Requires this Moodle version.
-$plugin->component = 'block_lw_courses'; // Full name of the plugin (used for diagnostics).
-$plugin->maturity = MATURITY_STABLE;
-$plugin->release = 'v1.4.0';
+/**
+ * Privacy Subsystem for block_lw_courses implementing null_provider.
+ *
+ * @copyright  2018 Mathew May mathew.may@learningworks.co.nz
+ * @license    http://www.gnu.org/copyleft/gpl.html GNU GPL v3 or later
+ */
+class provider implements \core_privacy\local\metadata\null_provider {
+
+    /**
+     * Get the language string identifier with the component's language
+     * file to explain why this plugin stores no data.
+     *
+     * @return  string
+     */
+    public static function get_reason() : string {
+        return 'privacy:metadata';
+    }
+}
